--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.6.0"
   }
 }
